plugins {
    id 'java'
    id 'application'
}

group 'com.example'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}
java {
    sourceCompatibility = JavaVersion.VERSION_17  // Compile with Java 17
    targetCompatibility = JavaVersion.VERSION_17  // Target Java 17
}
dependencies {
    def flinkVersion = '1.20.0'
    def log4jVersion = '2.17.1'
    // Flink core dependencies
    implementation "org.apache.flink:flink-streaming-java:${flinkVersion}"
    implementation "org.apache.flink:flink-clients:${flinkVersion}"
    implementation "org.apache.flink:flink-runtime-web:${flinkVersion}"
    
    // Flink Table API dependencies
    implementation "org.apache.flink:flink-table-api-java-bridge:${flinkVersion}"
    implementation "org.apache.flink:flink-table-planner-loader:${flinkVersion}"
    implementation "org.apache.flink:flink-table-runtime:${flinkVersion}"
    
    // Flink CDC connector for PostgreSQL
    implementation 'com.ververica:flink-sql-connector-postgres-cdc:2.4.2'

    // Redis client
    implementation 'io.lettuce:lettuce-core:6.2.6.RELEASE'
    
    // Add logging framework
    implementation 'org.slf4j:slf4j-api:2.0.16'
    implementation 'org.slf4j:slf4j-log4j12:2.0.16'

    implementation "org.apache.logging.log4j:log4j-slf4j-impl:${log4jVersion}"
    implementation "org.apache.logging.log4j:log4j-api:${log4jVersion}"
    implementation "org.apache.logging.log4j:log4j-core:${log4jVersion}"
}

application {
    mainClass = 'com.example.PostgresCdcJob'
    applicationDefaultJvmArgs = [
        '--add-opens=java.base/java.util=ALL-UNNAMED',
    
    ]
}

jar {
    manifest {
        attributes 'Main-Class': 'com.example.PostgresCdcJob'
    }
    
    // Include all dependencies in the jar
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
    zip64 = true  // Enable Zip64

    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
} 